--- a/homework_61.2/package.json
+++ b/homework_61.2/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "ethers": "5.7.2",
+    "fs": "^0.0.1-security",
+    "solc": "^0.8.19",
     "vue": "3.2.36",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
